# Fliesentisch

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  turbo.json
.cargo/: audit.toml
.codex/environments/: environment.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: backend.yml  ci.yml  dependabot-auto-merge.yml  deploy.yml  frontend.yml
.playwright-cli/: page-2026-03-02T23-35-53-005Z.yml  page-2026-03-02T23-36-13-617Z.yml
backend/: .env.example  Cargo.toml  Dockerfile  README.md
backend/src/: admin.rs  auth.rs  campaign_store.rs  campaigns.rs  config.rs  error.rs  invites.rs  main.rs  router.rs  session.rs  state.rs  token.rs  users.rs
docs/: Tech-requirement.md  google-oauth-onboarding.md
docs/contracts/: datachannel-protocol.md  token-api.md  track-contract.md
docs/plans/: 2026-03-02-dnd-virtual-table-delivery-plan.md  2026-03-03-frontend-debugging-mcp-playwright-plan.md  2026-03-03-github-ci-hardening-plan.md  2026-03-03_tanstack-start-migration.md  2026-03-06_gm-split-rooms-plan.md  2026-03-06_google-oauth2-admin-user-access-plan.md  2026-03-06_main-window-design-review.md  2026-03-09_room-session-architecture-refactor.md  2026-03-30_simple-auth-phase-1.md  2026-03-30_split-mode-phase-1.md  2026-03-30_split-mode-phase-2.md  2026-04-05_issue-20-auth-first-slice.md  2026-05-31_continuous-deployment.md  2026-05-31_h3-v2-ga-upgrade.md  2026-07-09_handout-spotlight.md  2026-07-09_open-issues-delivery.md  2026-07-09_role-scoped-campaign-invites.md  2026-07-09_room-diagnostics.md  2026-07-09_shared-room-protocol.md
frontend/: .dockerignore  .env.local.example  Dockerfile  README.md  eslint.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/e2e/: auth-admin.spec.ts  handout-spotlight.spec.ts  lobby.spec.ts  whisper.spec.ts
frontend/scripts/: multi-clients.sh  playwright-cli.multiclient.config.json  run-e2e.sh
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/components/: JoinForm.test.tsx  JoinForm.tsx  RoomSession.tsx  RoomSessionClient.tsx  TrackElement.tsx
frontend/src/hooks/: useWhisperPtt.test.tsx  useWhisperPtt.ts
frontend/src/lib/: client-id.test.ts  client-id.ts  protocol.test.ts  protocol.ts  whisper-membership.test.ts  (+1 more)
infrastructure/: .env.example  README.md  docker-compose.vps.yml  docker-compose.yml  package.json
infrastructure/caddy/: Caddyfile
infrastructure/livekit/: livekit.vps.yaml  livekit.yaml
infrastructure/scripts/: deploy.sh
(+81 files in other folders)
