[package]
name = "virtual-table-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
chrono = { version = "0.4.38", features = ["clock", "serde"] }
dotenvy = "0.15.7"
http = "1.1.0"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.68"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }

[dev-dependencies]
tower = "0.5.1"
