[package]
name = "virtual-table-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
chrono = { version = "0.4.38", features = ["clock", "serde"] }
dotenvy = "0.15.7"
http = "1.1.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

[dev-dependencies]
tower = "0.5.1"
