[package]
name = "virtual-table-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["clock", "serde"] }
dotenvy = "0.15.7"
hmac = "0.12.1"
http = "1.1.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
rand = "0.8.5"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sha2 = "0.11.0"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
thiserror = "2.0.18"
time = "0.3.47"
tokio = { version = "1.51.1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
url = "2.5.8"

[dev-dependencies]
tower = "0.5.1"
